docs: add handoff notes to IMPLEMENTATION.md for completed stories 1.2–2.2